--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 	<title>Maggie Liu Portfolio</title>
 	<link rel="stylesheet" href="css/globals.css" />
-    <link rel="stylesheet" href="css/styleguide.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/grid.css" />
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styleguide.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/fonts.css" />
+  <link rel="stylesheet" href="css/grid.css" />
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
 
 <style>
 
@@ -39,7 +39,7 @@ body {
 
   <main class="d-landing">
     <div class="div">
-      <a href="/" class="m-logo">
+      <a href="index.html" class="m-logo">
         <img src="/img/about/m_logo_green.svg" alt="Site Logo">
       </a>
       
@@ -175,7 +175,7 @@ body {
       </div>
 
       <nav class="contact-nav">
-          <a href="#about">ABOUT</a>
+          <a href="about.html">ABOUT</a>
           <a href="https://linkedin.com/in/maggieliujx" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
           <a href="mailto:maggieliujx@gmail.com">MAGGIELIUJX@GMAIL.COM</a>
       </nav>
@@ -799,6 +799,7 @@ window.addEventListener('load', function () {
     if (subtitle) subtitle.style.opacity = is ? '1' : '0.25';
     p.style.opacity = '1';
   });
+  
 
 </script>
 
