--- a/about.html
+++ b/about.html
@@ -28,80 +28,12 @@
 
 
 <body>
-  <!-- site logo (fixed top-left, same as index) -->
-  <a href="index.html" class="m-logo">
-    <img src="/img/about/m_logo_green.svg" alt="Site Logo">
-  </a>
+  <!-- header injected from partial -->
+  <div id="site-header"></div>
+  <script src="js/load-partials.js" defer></script>
 
-  <!-- page info (city + time) top-right, same placement as index -->
-  <div id="page-info">
-    <span class="label">Amsterdam</span>
-    <span class="clock">00:00</span>
-  </div>
 
-  <!-- contact nav (desktop) -->
-  <nav class="contact-nav">
-    <a href="about.html">ABOUT</a>
-    <a href="https://linkedin.com/in/maggieliujx" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
-    <a href="mailto:maggieliujx@gmail.com">MAGGIELIUJX@GMAIL.COM</a>
-  </nav>
 
-  <!-- collapsed contact toggle for mobile (40x40) -->
-  <button id="contact-toggle" aria-label="Open contact" aria-expanded="false" aria-controls="contact-nav" title="Contact">
-    <img src="img/index/icon_plus.png" alt="">
-  </button>
-
-  <!-- contact toggle script (keeps icon file and rotates on open/close) -->
-  <script>
-  (function () {
-    const toggle = document.getElementById('contact-toggle');
-    const nav = document.querySelector('.contact-nav');
-    if (!toggle || !nav) return;
-    const imgEl = toggle.querySelector('img');
-    if (imgEl) {
-      imgEl.style.transition = 'transform 0.5s ease, opacity 0.5s ease';
-      imgEl.style.willChange = 'transform, opacity';
-    }
-
-    function setToggleState(isOpen) {
-      if (!imgEl) return;
-      imgEl.style.transform = isOpen ? 'rotate(90deg)' : 'rotate(0deg)';
-      toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
-    }
-
-    function initState() {
-      if (window.innerWidth <= 1023) {
-        nav.classList.remove('contact-open');
-        nav.classList.add('contact-closed');
-        toggle.style.display = 'inline-flex';
-        setToggleState(false);
-      } else {
-        nav.classList.remove('contact-closed', 'contact-open');
-        nav.style.display = '';
-        toggle.style.display = 'none';
-        setToggleState(false);
-      }
-    }
-
-    toggle.addEventListener('click', () => {
-      const isOpen = nav.classList.toggle('contact-open');
-      nav.classList.toggle('contact-closed', !isOpen);
-      setToggleState(isOpen);
-    });
-
-    document.addEventListener('click', (e) => {
-      if (window.innerWidth > 1023) return;
-      if (!nav.classList.contains('contact-open')) return;
-      if (e.target.closest('.contact-nav') || e.target.closest('#contact-toggle')) return;
-      nav.classList.remove('contact-open');
-      nav.classList.add('contact-closed');
-      setToggleState(false);
-    }, true);
-
-    window.addEventListener('resize', initState);
-    document.addEventListener('DOMContentLoaded', initState);
-  })();
-  </script>
 
 </body>
 
