oct 16 - about page corner elements + bg images

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 </head>
 
 
-<body>
+<body class="about-page">
 
   <main class="d-landing">
     <div class="div">
@@ -56,8 +56,12 @@
       </div>
 
       <div class="controls" aria-hidden="false">
-        <button id="about-prev" class="carousel-btn" aria-label="Previous background">‹</button>
-        <button id="about-next" class="carousel-btn" aria-label="Next background">›</button>
+        <button id="about-prev" class="carousel-btn" aria-label="Previous background" title="Previous">
+          <img src="img/index/arrow_left.png" alt="prev">
+        </button>
+        <button id="about-next" class="carousel-btn rotate" aria-label="Next background" title="Next">
+          <img src="img/index/arrow_left.png" alt="next">
+        </button>
       </div>
     </div>
 
