oct 21 drag about paragraph

--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
 
 
   <script src="js/about-carousel.js" defer></script>
-
   <script src="js/load-partials.js" defer></script>
+  <script src="js/about-paragraph-drag.js" defer></script>
 
 
 
