--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Maggie Liu Portfolio</title>
+  <title>About</title>
 	<link rel="stylesheet" href="css/globals.css" />
   <link rel="stylesheet" href="css/styleguide.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -30,12 +30,9 @@
 <body class="about-page">
 
   <main class="d-landing">
-  
 
-      <div id="site-header"></div>
-
-
-      
+    <div id="site-header"></div>
+ 
       <div class="about-paragraph">
         <p>
           I thrive on turning ideas into things you can see, touch, and experience—whether in pixels or physical form. My approach to design is shaped by curiosity—always exploring, questioning, and seeking unexpected solutions.
@@ -44,7 +41,6 @@
         <p>A traveler at heart, I find inspiration everywhere—whether in a bustling city, a quiet mountain village, or a random conversation with strangers. I’m always open to new perspectives, unconventional ideas, and meaningful connections. Let’s chat!</p>
       </div>
       
-
       <!-- Fullscreen background carousel (desktop only) -->
       <div class="about-carousel" aria-hidden="false">
         <div class="about-slides">
@@ -62,9 +58,7 @@
           </button>
         </div>
       </div>
-
-
-
+  </main>
 
   <script src="js/about-carousel.js" defer></script>
   <script src="js/load-partials.js" defer></script>
