--- a/work.html
+++ b/work.html
@@ -39,13 +39,13 @@ body {
   <main class="d-landing">
     <div class="div">
 
-    <div id="site-header"></div>
+      <div id="site-header"></div>
 
       <div class="grid-row">
         
         <section class="portfolio-section grid-col-4of12">
           <div class="frame-2">
-            <a href="#JDE" class="frame-3" data-index="0">
+            <a href="jde.html" class="frame-3" data-index="0">
               <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 8px;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2024</h2>
@@ -122,7 +122,7 @@ body {
 
         <section class="gallery-section grid-col-8of12">
             <div class="grid-row--column grid-col-1of12">
-              <a href="#JDE" class="hover-swap" data-index="0">
+              <a href="jde.html" class="hover-swap" data-index="0">
                 <img src="img/index/jde_before.png" class="default-img" alt="JDE">
                 <img src="img/index/jde_after.gif" class="hover-img" alt="Alternate image">
               </a>  
