--- a/jde.html
+++ b/jde.html
@@ -37,7 +37,7 @@
                 With a rapidly growing portfolio of coffee brands worldwide, Jacobs Douwe Egberts needed a scalable design solution to unify their digital presence while preserving each brand's unique identity. Many of the brands lacked formal design guidelines, leading to inconsistent user experiences and inefficient development cycles.
             </p>
             <p>
-                I was brought in as a product designer to lead the creation and implementation of a white-label design system—one that can be easily adapted across 40+ brands, streamline collaboration between design and development, and support rapid onboarding of new brands into their ecosystem.
+                I was brought in as a product designer to lead the creation and implementation of a white-label design system — one that can be easily adapted across 40+ brands, streamline collaboration between design and development, and support rapid onboarding of new brands into their ecosystem.
             </p>
 
             <ul class="project-specs">
@@ -54,8 +54,6 @@
                 <img src="img/jde/jde_cover.png" alt="Jacobs Douwe Egberts Project" />
             </div>
         </section>
-
-
     </div>
 
     <div class="grid-row">
@@ -65,7 +63,7 @@
                 Before defining new styles or components, I conducted a thorough audit of JDE's partially built design system to understand what existed, what could be reused, and where gaps remained.
             </p>
             <p>
-                From there, we established foundational styles — such as colour, typography, and spacing—using design tokens. This token-based system allowed us to rapidly theme for each brand and make updates efficiently, while ensuring alignment with the developers’ existing implementation. Collaborating closely with engineering, we refined a shared token structure that enabled consistency and maintainability across all 40+ brands.
+                From there, we established foundational styles — such as colour, typography, and spacing — using design tokens. This token-based system allowed us to rapidly theme for each brand and make updates efficiently, while ensuring alignment with the developers’ existing implementation. Collaborating closely with engineering, we refined a shared token structure that enabled consistency and maintainability across all 40+ brands.
             </p>
         </section>
 
@@ -84,6 +82,64 @@
               <img src="img/jde/grid.png">
             </div>
           </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-3of12">
+            <h2 class="section-title">Component library</h2>
+            <p>
+                The component library uses atomic design principles, creating flexible and easy-to-use components and simplifying maintenance.
+            </p>
+        </section>
+
+        <section class="visuals-section grid-col-9of12">
+            <div class="visual-grid">
+                <div class="project-image"><img src="img/jde/atoms.png"></div>
+                <div class="project-image"><img src="img/jde/molecules.png"></div>
+                <div class="project-image"><img src="img/jde/organisms.png"></div>
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-5of12">
+            <h2 class="section-title">Brand alignment & accessibility</h2>
+            <p>
+                When brand books were available, we used them to define colours and typography via tokens. For brands without formal guidelines, we referenced their current websites, logos, or packaging and aligned with brand teams for approval. All styles were checked for accessibility, ensuring WCAG compliance while balancing brand authenticity.
+        </section>
+
+        <section class="visuals-section grid-col-7of12">
+            <div class="project-image">
+                <img src="img/jde/accessibility.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-3of12">
+            <h2 class="section-title">Applied at scale</h2>
+            <p>
+                The design system has been successfully adopted across 40+ brands, demonstrating its flexibility and scalability. By streamlining collaboration with brand teams and developers, the system also simplified the onboarding of new brands into the digital ecosystem.
+            </p>
+        </section>
+
+        <section class="visuals-section grid-col-9of12">
+            <div class="project-image">
+                <img src="img/jde/scale.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-row">
+        <section class="writeup-section grid-col-3of12">
+            <h2 class="section-title">Portfolio of brands</h2>
+        </section>
+
+        <section class="visuals-section grid-col-9of12">
+            <div class="visual-grid">
+                <div class="project-image"><img src="img/jde/brands.png"></div>
+            </div>
         </section>
     </div>
 
