--- a/jde.html
+++ b/jde.html
@@ -94,10 +94,8 @@
         </section>
 
         <section class="visuals-section grid-col-9of12">
-            <div class="visual-grid">
-                <div class="project-image"><img src="img/jde/atoms.png"></div>
-                <div class="project-image"><img src="img/jde/molecules.png"></div>
-                <div class="project-image"><img src="img/jde/organisms.png"></div>
+            <div class="project-image">
+                <img src="img/jde/atomic.png">
             </div>
         </section>
     </div>
