--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
 
         <div class="controls" aria-hidden="false">
           <button id="about-prev" class="carousel-btn" aria-label="Previous background" title="Previous">
-            <img src="img/index/arrow_left.png" alt="prev">
+            <img src="img/index/arrow_left.svg" alt="prev">
           </button>
           <button id="about-next" class="carousel-btn rotate" aria-label="Next background" title="Next">
-            <img src="img/index/arrow_left.png" alt="next">
+            <img src="img/index/arrow_left.svg" alt="next">
           </button>
         </div>
       </div>
