--- a/jde.html
+++ b/jde.html
@@ -28,6 +28,7 @@
 <body class="project-page">
 
     <div id="site-header"></div>
+    
 
     <div class="grid-row">
         <section class="writeup-section grid-col-5of12">
@@ -57,7 +58,7 @@
     </div>
 
     <div class="grid-row">
-        <section class="writeup-section grid-col-5of12">
+        <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Laying the groundwork</h2>
             <p>
                 Before defining new styles or components, I conducted a thorough audit of JDE's partially built design system to understand what existed, what could be reused, and where gaps remained.
@@ -67,21 +68,21 @@
             </p>
         </section>
 
-        <section class="visuals-section grid-col-7of12">
-          <div class="visual-stack">
-            <div class="project-image">
-              <img src="img/jde/token_map.png" alt="Token map">
-            </div>
+        <section class="visuals-section grid-col-8of12">
+            <div class="visual-stack">
+                <div class="project-image">
+                <img src="img/jde/token_map.png" alt="Token map">
+                </div>
 
-            <div class="project-image">
-              <img src="img/jde/font.png" alt="Type specimen">
-            </div>
+                <div class="project-image">
+                <img src="img/jde/font.png" alt="Type specimen">
+                </div>
 
-            <!-- full-width image inside the same visuals section, stacked below the two visuals -->
-            <div class="project-image project-image--fullwidth grid-col-12of12">
-              <img src="img/jde/grid.png">
+                <!-- full-width image inside the same visuals section, stacked below the two visuals -->
+                <div class="project-image project-image--fullwidth grid-col-12of12">
+                <img src="img/jde/grid.png">
+                </div>
             </div>
-          </div>
         </section>
     </div>
 
@@ -101,13 +102,13 @@
     </div>
 
     <div class="grid-row">
-        <section class="writeup-section grid-col-5of12">
+        <section class="writeup-section grid-col-4of12">
             <h2 class="section-title">Brand alignment & accessibility</h2>
             <p>
                 When brand books were available, we used them to define colours and typography via tokens. For brands without formal guidelines, we referenced their current websites, logos, or packaging and aligned with brand teams for approval. All styles were checked for accessibility, ensuring WCAG compliance while balancing brand authenticity.
         </section>
 
-        <section class="visuals-section grid-col-7of12">
+        <section class="visuals-section grid-col-4of12">
             <div class="project-image">
                 <img src="img/jde/accessibility.png">
             </div>
@@ -130,19 +131,22 @@
     </div>
 
     <div class="grid-row">
-        <section class="writeup-section grid-col-3of12">
-            <h2 class="section-title">Portfolio of brands</h2>
-        </section>
+       
 
-        <section class="visuals-section grid-col-9of12">
+        <section class="visuals-section grid-col-12of12">
+            <h2 class="section-title" style="font-weight: bold;">Portfolio of Brands</h2>
+            <br>
+            <br>
             <div class="visual-grid">
                 <div class="project-image"><img src="img/jde/brands.png"></div>
             </div>
         </section>
     </div>
 
+    <div id="site-footer"></div>
 
     <script src="js/load-partials.js" defer></script>
+    <script src="js/footer.js"></script>
 
 </body>
 
