oct 31 jde footer

--- a/jde.html
+++ b/jde.html
@@ -131,8 +131,6 @@
     </div>
 
     <div class="grid-row">
-       
-
         <section class="visuals-section grid-col-12of12">
             <h2 class="section-title" style="font-weight: bold;">Portfolio of Brands</h2>
             <br>
@@ -143,10 +141,32 @@
         </section>
     </div>
 
-    <div id="site-footer"></div>
+    <footer class="hidden">
+        <div class="site-footer" id="next-project">
+            <a href="marinaAbramovic.html" id="next-project-link">
+                <div class="next-project-content">
+                    <div class="next-project-text">
+                        <p>Next Project</p>
+                    </div>
+                    <div class="next-project-icons">
+                        <img src="img/index/arrow_left.svg" alt="Arrow Icon">
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="contact-me-section">
+            <p>Always up for a chat — don't be shy, slide into my DMs!</p>
+            <div class="email-container">
+                <a href="mailto:maggieliujx@gmail.com">maggieliujx@gmail.com</a>
+            </div>
+        </div>
+
+    </footer>
 
     <script src="js/load-partials.js" defer></script>
-    <script src="js/footer.js"></script>
+
+
 
 </body>
 
