--- a/work.html
+++ b/work.html
@@ -54,7 +54,8 @@ body {
                 <span class="text-wrapper-5">[whitelabel design system]</span>
               </div>
             </a>
-            <a href="#Marina" class="frame-3" data-index="1">
+
+            <a href="marinaAbramovic.html" class="frame-3" data-index="1">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2024</h2>
@@ -63,6 +64,7 @@ body {
                 <span class="text-wrapper-5">[microsite]</span>
               </div>
             </a>
+
             <a href="#Dolomiti" class="frame-3" data-index="2">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
@@ -72,6 +74,7 @@ body {
                 <span class="text-wrapper-5">[visual experiments]</span>
               </div>
             </a>
+
             <a href="#Montblanc" class="frame-3" data-index="3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
@@ -81,6 +84,7 @@ body {
                 <span class="text-wrapper-5">[digital paper]</span>
               </div>
             </a>
+
             <a href="#Toyota" class="frame-3" data-index="4">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
@@ -90,6 +94,7 @@ body {
                 <span class="text-wrapper-5">[global navigation]</span>
               </div>
             </a>
+
             <a href="#Puma" class="frame-3" data-index="5">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
@@ -99,6 +104,7 @@ body {
                 <span class="text-wrapper-5">[interactive installation]</span>
               </div>
             </a>
+
             <a href="#Lufthansa" class="frame-3" data-index="6">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
@@ -108,6 +114,7 @@ body {
                 <span class="text-wrapper-5">[image recognition]</span>
               </div>
             </a>
+
             <a href="#Alice" class="frame-3" data-index="7">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
@@ -117,6 +124,7 @@ body {
                 <span class="text-wrapper-5">[print]</span>
               </div>
             </a>
+            
           </div>
         </section>
 
@@ -127,7 +135,7 @@ body {
                 <img src="img/index/jde_after.gif" class="hover-img" alt="Alternate image">
               </a>  
 
-              <a href="#Marina" class="hover-swap" data-index="1">
+              <a href="marinaAbramovic.html" class="hover-swap" data-index="1">
                 <img src="img/index/ma_before.png" class="default-img" alt="Marina Abramović">
                 <img src="img/index/ma_after.png" class="hover-img" alt="Alternate image">
               </a> 
