--- a/jde.html
+++ b/jde.html
@@ -155,16 +155,15 @@
             </a>
         </div>
 
-        <div class="contact-me-section">
-            <p>Always up for a chat — don't be shy, slide into my DMs!</p>
-            <div class="email-container">
-                <a href="mailto:maggieliujx@gmail.com">maggieliujx@gmail.com</a>
-            </div>
-        </div>
+        
 
     </footer>
 
+    <div id="site-footer"></div>
+
     <script src="js/load-partials.js" defer></script>
+    <script src="js/footer.js" defer></script>
+    <script src="partials/footer.html" defer></script>
 
 
 
