--- a/jde.html
+++ b/jde.html
@@ -16,11 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>JDE</title>
-	<link rel="stylesheet" href="css/globals.css" />
-    <link rel="stylesheet" href="css/styleguide.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/grid.css" />
+	<link rel="stylesheet" href="css/globals.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
 
 </head>
@@ -158,6 +157,12 @@
         
 
     </footer>
+
+      <div class="contact-me-section">
+    <div class="contact-me-text">
+      <h2 class="contact-me-title">MAGS</h2>
+      <h2 class="contact-me-title">FOLIO</h2>
+    </div>
 
     <div id="site-footer"></div>
 
