--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -15,21 +15,62 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Marina Abramović</title>
-	<link rel="stylesheet" href="css/globals.css" />
-    <link rel="stylesheet" href="css/styleguide.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/grid.css" />
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
-
+	<title>Marina Abramovic</title>
+	<link rel="stylesheet" href="css/globals.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/grid.css">
 </head>
 
 <body class="project-page">
 
     <div id="site-header"></div>
     
+    <div class="grid-row">
+        <section class="writeup-section grid-col-5of12">
+            <h1 class="project-title">MARINA ABRAMOVIĆ</h1>
 
+            <p>
+                During an internal design hackathon, I tackled the challenge of creating an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event’s key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
+            </p>
+
+            <ul class="project-specs">
+              <li>Duration: 3 hours</li>
+            </ul>
+        </section>
+
+        <section class="visuals-section grid-col-7of12">
+            <div class="project-image">
+                <img src="img/marina/marina_cover.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="grid-col-12of12">
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="auto" src="https://embed.figma.com/proto/kYSarqITUT7mrReV6Sdwe5/PD-Hackathon---Marina-Abramovi%C4%87--10_05_2024-?page-id=23%3A1048&node-id=9-22&viewport=229%2C393%2C0.32&scaling=scale-down&content-scaling=fixed&starting-point-node-id=9%3A22&embed-host=share" allowfullscreen></iframe>
+    </div>
+
+    <footer class="hidden">
+        <div class="site-footer" id="next-project">
+            <a href="dolomiti.html" id="next-project-link">
+                <div class="next-project-content">
+                    <div class="next-project-text">
+                        <p>Next Project</p>
+                    </div>
+                    <div class="next-project-icons">
+                        <img src="img/index/arrow_left.svg" alt="Arrow Icon">
+                    </div>
+                </div>
+            </a>
+        </div>
+    </footer>
+
+
+    <div id="site-footer"></div>
+
+    <script src="js/load-partials.js" defer></script>
+    <script src="js/footer.js" defer></script>
+    <script src="partials/footer.html" defer></script>
 
 
 
