--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -31,7 +31,7 @@
             <h1 class="project-title">MARINA ABRAMOVIĆ</h1>
 
             <p>
-                During an internal design hackathon, I tackled the challenge of creating an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event’s key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
+                During an internal design hackathon, I had to create an attention-grabbing first fold for a virtual (made-up) event landing page. The goal was to showcase the event’s key details, highlight its value proposition, and incorporate interactive elements that spark user interest and participation.
             </p>
 
             <ul class="project-specs">
@@ -46,9 +46,10 @@
         </section>
     </div>
 
-    <div class="grid-col-12of12">
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="auto" src="https://embed.figma.com/proto/kYSarqITUT7mrReV6Sdwe5/PD-Hackathon---Marina-Abramovi%C4%87--10_05_2024-?page-id=23%3A1048&node-id=9-22&viewport=229%2C393%2C0.32&scaling=scale-down&content-scaling=fixed&starting-point-node-id=9%3A22&embed-host=share" allowfullscreen></iframe>
+    <div class="marina-prototype">
+        <iframe class="marina-iframe" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/kYSarqITUT7mrReV6Sdwe5/PD-Hackathon---Marina-Abramovi%C4%87--10_05_2024-?page-id=23%3A1048&node-id=9-22&viewport=193%2C250%2C0.4&scaling=scale-down&content-scaling=fixed&starting-point-node-id=9%3A22&embed-host=share" allowfullscreen></iframe>
     </div>
+    
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
