--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
               </div>
             </a>
 
-            <a href="#Dolomiti" class="frame-3" data-index="2">
+            <a href="#dolomiti.html" class="frame-3" data-index="2">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2024</h2>
@@ -134,7 +134,7 @@
             </div>
 
             <div class="grid-row--column grid-col-2of12">
-              <a href="#Dolomiti" class="hover-swap" data-index="2">
+              <a href="dolomiti.html" class="hover-swap" data-index="2">
                 <img src="img/index/dolomiti_before.png" class="default-img" alt="Dolomiti">
                 <img src="img/index/dolomiti_after.png" class="hover-img" alt="Alternate image">
               </a>  
