--- a/work.html
+++ b/work.html
@@ -57,17 +57,17 @@
               </div>
             </a>
 
-            <a href="#dolomiti.html" class="frame-3" data-index="2">
+            <a href="photography.html" class="frame-3" data-index="2">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2024</h2>
-                  <h2 class="text-wrapper-4">DOLOMITI</h2>
+                  <h2 class="text-wrapper-4">Photography</h2>
                 </div>
                 <span class="text-wrapper-5">[visual experiments]</span>
               </div>
             </a>
 
-            <a href="#Montblanc" class="frame-3" data-index="3">
+            <a href="montblanc.html" class="frame-3" data-index="3">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2023</h2>
@@ -77,7 +77,7 @@
               </div>
             </a>
 
-            <a href="#Toyota" class="frame-3" data-index="4">
+            <a href="toyota.html" class="frame-3" data-index="4">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2022</h2>
@@ -87,7 +87,7 @@
               </div>
             </a>
 
-            <a href="#Puma" class="frame-3" data-index="5">
+            <a href="puma.html" class="frame-3" data-index="5">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2019</h2>
@@ -97,7 +97,7 @@
               </div>
             </a>
 
-            <a href="#Lufthansa" class="frame-3" data-index="6">
+            <a href="lufthansa.html" class="frame-3" data-index="6">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2019</h2>
@@ -107,7 +107,7 @@
               </div>
             </a>
 
-            <a href="#Alice" class="frame-3" data-index="7">
+            <a href="alice.html" class="frame-3" data-index="7">
               <div style="display: flex; flex-direction: column; align-items: flex-start;">
                 <div class="gallery-caption">
                   <h2 class="text-wrapper-4">2019</h2>
@@ -134,36 +134,36 @@
             </div>
 
             <div class="grid-row--column grid-col-2of12">
-              <a href="dolomiti.html" class="hover-swap" data-index="2">
+              <a href="photography.html" class="hover-swap" data-index="2">
                 <img src="img/index/dolomiti_before.png" class="default-img" alt="Dolomiti">
                 <img src="img/index/dolomiti_after.png" class="hover-img" alt="Alternate image">
               </a>  
 
-              <a href="#Montblanc" class="hover-swap" data-index="3">
+              <a href="montblanc.html" class="hover-swap" data-index="3">
                 <img src="img/index/mb_before.png" class="default-img" alt="Montblanc">
                 <img src="img/index/mb_after.png" class="hover-img" alt="Alternate image">
               </a> 
             </div>
 
             <div class="grid-row--column grid-col-3of12">
-              <a href="#Toyota" class="hover-swap" data-index="4">
+              <a href="toyota.html" class="hover-swap" data-index="4">
                 <img src="img/index/toyota_before.png" class="default-img" alt="Toyota">
                 <img src="img/index/toyota_after.png" class="hover-img" alt="Alternate image">
               </a>  
 
-              <a href="#Puma" class="hover-swap" data-index="5">
+              <a href="puma.html" class="hover-swap" data-index="5">
                 <img src="img/index/puma_before.png" class="default-img" alt="Puma">
                 <img src="img/index/puma_after.png" class="hover-img" alt="Alternate image">
               </a> 
             </div>
 
             <div class="grid-row--column grid-col-2of12">
-              <a href="#Lufthansa" class="hover-swap" data-index="6">
+              <a href="lufthansa.html" class="hover-swap" data-index="6">
                 <img src="img/index/lufthansa_before.png" class="default-img" alt="Lufthansa">
                 <img src="img/index/lufthansa_after.png" class="hover-img" alt="Alternate image">
               </a>  
 
-              <a href="#Alice" class="hover-swap" data-index="7">
+              <a href="alice.html" class="hover-swap" data-index="7">
                 <img src="img/index/alice_before.png" class="default-img" alt="Alice">
                 <img src="img/index/alice_after.png" class="hover-img" alt="Alternate image">
               </a> 
