nov 7 photography grid

--- a/jde.html
+++ b/jde.html
@@ -68,16 +68,15 @@
         <section class="visuals-section grid-col-8of12">
             <div class="visual-stack">
                 <div class="project-image">
-                <img src="img/jde/token_map.png" alt="Token map">
+                    <img src="img/jde/token_map.png">
                 </div>
 
                 <div class="project-image">
-                <img src="img/jde/font.png" alt="Type specimen">
+                    <img src="img/jde/font.png">
                 </div>
 
-                <!-- full-width image inside the same visuals section, stacked below the two visuals -->
-                <div class="project-image project-image--fullwidth grid-col-12of12">
-                <img src="img/jde/grid.png">
+                <div class="grid-col-12of12 project-image">
+                    <img src="img/jde/grid.png">
                 </div>
             </div>
         </section>
@@ -133,7 +132,9 @@
             <br>
             <br>
             <div class="visual-grid">
-                <div class="project-image"><img src="img/jde/brands.png"></div>
+                <div class="project-image">
+                    <img src="img/jde/brands.png">
+                </div>
             </div>
         </section>
     </div>
