--- a/photography.html
+++ b/photography.html
@@ -31,7 +31,7 @@
             <h1 class="project-title">Photography</h1>
 
             <p>
-                A collection of photography-led experiments where I explore transparency, layering, and texture to create new visual narratives. This ongoing series focuses on process over perfection—testing how images can transform through overlays, distortions, and unexpected combinations.
+                A collection of photography-led experiments where I play with transparency, layering, and texture to create new visual narratives. This ongoing series focuses on process over perfection — exploring how visuals can evolve beyond static frames through unexpected combinations.
             </p>
         </section>
 
@@ -40,16 +40,34 @@
                 <video id="project-video" src="vd/photography/mirror.mp4" loop muted>
             </div>
         </section>
-
     </div>
 
-    <div class="grid-row" padding-top="24px">
+    <div class="grid-row" style="padding-top:24px !important;">
         <div class="grid-col-4of12">
             <img src="img/photography/dolo_1.png">
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
                 <video id="project-video" src="vd/photography/dolo_2.mp4" loop muted>
+            </div>
+        </div>
+        <div class="grid-col-4of12">
+            <img src="img/photography/dolo_3.png">
+        </div>
+    </div>
+
+    <div class="grid-row" style="padding-top:24px !important;">
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/dolo_4.mp4" loop muted>
+            </div>
+        </div>
+        <div class="grid-col-4of12">
+            <img src="img/photography/dolo_5.png">
+        </div>
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/dolo_6.mp4" loop muted>
             </div>
         </div>
     </div>
