--- a/marinaAbramovic.html
+++ b/marinaAbramovic.html
@@ -53,7 +53,7 @@
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
-            <a href="dolomiti.html" id="next-project-link">
+            <a href="photography.html" id="next-project-link">
                 <div class="next-project-content">
                     <div class="next-project-text">
                         <p>Next Project</p>
