--- a/photography.html
+++ b/photography.html
@@ -15,18 +15,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dolomiti</title>
+	<title>Photography</title>
 	<link rel="stylesheet" href="css/globals.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/grid.css">
+
+
 </head>
 
 <body class="project-page">
 
     <div id="site-header"></div>
     
-    <div class="grid-row">
+    <div class="grid-row" style="width:calc(100% - 24px) !important;">
         <section class="writeup-section grid-col-5of12">
             <h1 class="project-title">Photography</h1>
 
@@ -37,18 +39,18 @@
 
         <section class="visuals-section grid-col-7of12">
             <div class="project-video">
-                <video id="project-video" src="vd/photography/mirror.mp4" loop muted>
+                <video id="project-video" src="vd/photography/mirror.mp4" loop>
             </div>
         </section>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important;">
+    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <img src="img/photography/dolo_1.png">
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="vd/photography/dolo_2.mp4" loop muted>
+                <video id="project-video" src="vd/photography/dolo_2.mp4" loop>
             </div>
         </div>
         <div class="grid-col-4of12">
@@ -56,10 +58,10 @@
         </div>
     </div>
 
-    <div class="grid-row" style="padding-top:24px !important;">
+    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="vd/photography/dolo_4.mp4" loop muted>
+                <video id="project-video" src="vd/photography/dolo_4.mp4" loop>
             </div>
         </div>
         <div class="grid-col-4of12">
@@ -67,10 +69,38 @@
         </div>
         <div class="grid-col-4of12">
             <div class="project-video">
-                <video id="project-video" src="vd/photography/dolo_6.mp4" loop muted>
+                <video id="project-video" src="vd/photography/dolo_6.mp4" loop>
             </div>
         </div>
     </div>
+
+    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/dolo_7.mp4" loop>
+            </div>
+        </div>
+        <div class="grid-col-4of12">
+            <img src="img/photography/dolo_8.png">
+        </div>
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/dolo_9.mp4" loop>
+            </div>
+        </div>
+    </div>
+
+    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+        <div class="grid-col-4of12">
+            <img src="img/photography/china_1.png">
+        </div>
+        <div class="grid-col-8of12">
+            <img src="img/photography/china_2.png">
+        </div>
+    </div>
+
+
+
 
     <footer class="hidden">
         <div class="site-footer" id="next-project">
