--- a/photography.html
+++ b/photography.html
@@ -99,7 +99,21 @@
         </div>
     </div>
 
+    <div class="grid-row" style="padding-top:24px !important;">
+        <div class="grid-col-12of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/china_3.mp4" loop>
+            </div>
+        </div>
+    </div>
 
+    <div class="grid-row" style="padding-top:24px !important; max-width: none !important; height: auto !important;">
+        <div class="grid-col-12of12">
+            <img style="max-width: none !important;" src="img/photography/china_4.png">
+        </div>
+    </div>
+
+    
 
 
     <footer class="hidden">
