--- a/photography.html
+++ b/photography.html
@@ -169,13 +169,31 @@
                 <video id="project-video" src="vd/photography/water_3.mp4" loop muted>
             </div>
         </div>
-        
-        
     </div>
 
+    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/water_5.mp4" loop>
+            </div>
+        </div>
+        <div class="grid-col-4of12">
+            <img src="img/photography/water_6.png">
+        </div>
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/water_7.mp4" loop muted>
+            </div>
+        </div>
+    </div>
 
-
-
+    <div class="grid-row" style="padding-top:24px !important; width:calc(100% - 48px) !important;">
+        <div class="grid-col-4of12">
+            <div class="project-video">
+                <video id="project-video" src="vd/photography/water_9.mp4" loop>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="hidden">
